Fixed responsive design issue on mobile where overflow did not scroll and player controls were not accessible.

--- a/src/public/player.css
+++ b/src/public/player.css
@@ -167,6 +167,7 @@ ul ol:last-child {
     position: relative;
     z-index: 4;
     border-top: 1px solid rgba(255, 255, 255, 0.1);
+    padding-bottom: 3rem;
 }
 
 .player-info {
@@ -204,6 +205,13 @@ audio::-webkit-media-controls-play-button:hover {
 }
 
 /* Responsive design */
+
+@media (max-width: 950px) {
+    .player-container {
+        overflow: scroll;
+    }
+}
+
 @media (max-width: 768px) {
     h1 {
         font-size: 1.8rem;
